# fovea

./: CHANGELOG.md  Cargo.toml  README.md
benches/: fold.rs  geometry.rs  transform.rs
examples/: asm_inspect.rs  camera_ingest.rs  custom_filter.rs  edge_detection.rs  fma_optimization.rs  hello_image.rs  pixel_conversion.rs  template_matching.rs  tiled_processing.rs
src/: common.rs  error.rs  guide.rs  internal.rs  lib.rs
src/analyze/: mod.rs
src/analyze/components/: connectivity.rs  engine.rs  mod.rs  stats.rs  union_find.rs
src/analyze/histogram/: engine.rs  equalize.rs  histogram.rs  mod.rs  otsu.rs  strategy.rs
src/analyze/integral/: engine.rs  mod.rs  output.rs  preflight.rs
src/guide/: camera-buffers.md  faq.md  getting-started.md  large-images.md  pixel-conversions.md  pixel-types.md
src/image/: border.rs  image_view.rs  mod.rs  neighborhood.rs  planar.rs  separable.rs  sequential.rs  tiles.rs  zip.rs
src/pixel/: family_tests.rs  indexed.rs  label.rs  mod.rs  mono.rs  mono_alpha.rs  pixel_traits.rs  primitives.rs  rgb.rs  srgb.rs  tests.rs
src/transform/: combine.rs  convert.rs  convolve.rs  convolve_separable.rs  filters.rs  fold.rs  geometry.rs  map_neighborhood.rs  mod.rs  morphology.rs  resize.rs  template_match.rs
tests/: derive_homogeneous_pixel.rs  derive_plain_pixel.rs  derive_zeroable_pixel.rs  end_to_end.rs
