[package]
name                   = "fovea"
description            = "A high-precision, type-safe computer vision library guaranteeing absolute image correctness at compile time"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
readme                 = "README.md"
repository             = "https://github.com/karhunen-loeve/fovea"
homepage               = "https://github.com/karhunen-loeve/fovea"
documentation          = "https://docs.rs/fovea"
keywords               = ["image", "computer-vision", "pixel", "color", "type-safe"]
categories             = ["computer-vision", "graphics", "multimedia::images"]
include = [
    "src/**/*.rs",
    "src/guide/**/*.md",
    "examples/**/*.rs",
    "benches/**/*.rs",
    "tests/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
fovea-derive = { version = "0.2.0", path = "../fovea-derive" }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "transform"
harness = false

[[bench]]
name = "fold"
harness = false

[[bench]]
name = "geometry"
harness = false

[[example]]
name = "hello_image"

[[example]]
name = "edge_detection"

[[example]]
name = "pixel_conversion"

[[example]]
name = "custom_filter"

[[example]]
name = "camera_ingest"

[[example]]
name = "tiled_processing"

[[example]]
name = "asm_inspect"

[[example]]
name = "fma_optimization"

[[example]]
name = "template_matching"
